--- a/RNA_seq_histone_chaperone_plots_PAPER_ET.Rmd
+++ b/RNA_seq_histone_chaperone_plots_PAPER_ET.Rmd
@@ -21,6 +21,19 @@ library("grid")
 library("corrplot")
 library(RColorBrewer)
 
+```{r setup, include=FALSE}
+
+knitr::opts_chunk$set(echo = TRUE)
+
+# Set working environment
+
+workingdir="C:/Users/eddie/Research/GitHub"
+
+#set working directory to the correct location for working machine
+knitr::opts_knit$set(root.dir = "workingdir")
+
+```
+
 ##################################
 #start anaysis here
 ##################################
@@ -30,7 +43,7 @@ setwd("C:\\Users\\eddie\\Desktop\\Research\\GitHub")
 #Bring in table with unnormalized transcription counts; check.names is important if you have dashes in the gene names 
 #row.names=1 command sets geneIDs as the row name
 countdataInteractors <- read.table("./readcounts_FINAL.txt",skip=1, header=TRUE,stringsAsFactors=FALSE, row.names=1, check.names=FALSE, sep="\t")
-#countdataInteractors_ash3 <- read.table("./readcounts_ash3.txt",skip=1, header=TRUE,stringsAsFactors=FALSE, row.names=1, check.names=FALSE, sep="\t")
+countdataInteractors_ash3 <- read.table("./readcounts_ash3.txt",skip=1, header=TRUE,stringsAsFactors=FALSE, row.names=1, check.names=FALSE, sep="\t")
 countdataInteractors_final = cbind(countdataInteractors, countdataInteractors_ash3[,6:7])
 countdataInteractors <- data.matrix(countdataInteractors_final)
 
@@ -92,15 +105,10 @@ colnames(Averaged_Orderd_KO_data) <- averageRowIDs
 Prc2targets <- read.table("heatmapPRC2genesEdit.txt", header=FALSE,stringsAsFactors=FALSE, check.names=FALSE, sep="\t") 
 
 ###SUBSET DATA FOR ALL KO SAMPLES
-Prc2targetTPM <- subset(allDataTPM, !(rownames(allDataTPM)%in%Prc2targets[,1]))
-Prc2targetTPM <- subset(Prc2targetTPM, rownames(Prc2targetTPM)%in%rownames(cac1DE) | rownames(Prc2targetTPM)%in%rownames(cac2DE) | rownames(Prc2targetTPM)%in%rownames(cac3DE))
+Prc2targetTPM <- subset(allDataTPM, rownames(allDataTPM)%in%Prc2targets[,1])
 
 ###SUBSET DATA FOR AVERAGED KO SAMPLES
 AVERAGE_Prc2targetTPM <- subset(Averaged_Orderd_KO_data, rownames(Averaged_Orderd_KO_data)%in%Prc2targets[,1])
-
-###SUBSET TO GET RID OF PRC2 GENES, BUT KEEP OTHER DE GENES (cac-1/2/3)
-AVERAGE_NonPRC2targetTPM <- subset(Averaged_Orderd_KO_data, !(rownames(Averaged_Orderd_KO_data)%in%Prc2targets[,1]))
-AVERAGE_NonPRC2targetTPM <- subset(AVERAGE_NonPRC2targetTPM, rownames(AVERAGE_NonPRC2targetTPM)%in%rownames(cac1DE) | rownames(AVERAGE_NonPRC2targetTPM)%in%rownames(cac2DE) | rownames(AVERAGE_NonPRC2targetTPM)%in%rownames(cac3DE))
 
 ###Subset data to filter out non-PRC2 target regions that got through (cutting out any genes over 2 tpm in WT)
 AVERAGE_Prc2targetTPM <- subset(AVERAGE_Prc2targetTPM, (AVERAGE_Prc2targetTPM[,1] < 2))
@@ -108,10 +116,6 @@ AVERAGE_Prc2targetTPM <- subset(AVERAGE_Prc2targetTPM, (AVERAGE_Prc2targetTPM[,1
 ###Add sudocount and log transform (if necessary)
 AVERAGE_Prc2targetTPM <- AVERAGE_Prc2targetTPM + 0.1
 AVERAGE_Prc2targetTPM <- log2(AVERAGE_Prc2targetTPM)
-
-#Non-PRC2
-AVERAGE_NonPRC2targetTPM <- AVERAGE_NonPRC2targetTPM + 0.1
-AVERAGE_NonPRC2targetTPM <- log2(AVERAGE_NonPRC2targetTPM)
 
 #melt data to get it into a format ggplots can use (load library "reshape2")
 library(reshape2)
@@ -143,7 +147,7 @@ box<-ggplot(meltedAveragePRC2targetData, aes(x=Sample, y=Count)) +
   labs(y="Expression Level (Transcripts per Million)", x="Strain") +
   stat_boxplot(geom = "errorbar", width = 0.2) + 
   geom_boxplot(notch = TRUE, outlier.shape = NA, fill=colors, size=0.1, coef=1.5, lwd=0.25) +
-  coord_flip(ylim=c(0,15))+
+  coord_flip(ylim=c(-4,10))+
   theme_get() + 
   theme(axis.line.x = element_line(size = 0.5, colour = "black"),
         axis.line.y = element_line(size = 0.5, colour = "black"),
@@ -174,13 +178,13 @@ breaks1=seq(-4, 5, by=.09) #This is to set a custom heatmaps scale. Not used her
 ##strategy 1 - Plot the average TMP of all genes that change expression; row normalization; clustredRows
 
 ##Keep Only Genes that are expressed in at least one sample
-GenesWithChanges <- subset(AVERAGE_NonPRC2targetTPM, (rowSums(allDataTPM) > 0))
+GenesWithChanges <- subset(AVERAGE_Prc2targetTPM, (rowSums(Prc2targetTPM) > 0))
 GenesWithChanges_95 <- subset(AVERAGE_Prc2targetTPM, (rowSums(Prc2targetTPM) > 0))
 
 #plot in the desired column order; did this by subsetting the dataset based on sample list 'altorder' above
 
-heatmap<- pheatmap(GenesWithChanges_no_PRC2[,rev(altorder)], color = colorRampPalette(rev(brewer.pal(n = 7, name ="RdBu")))(100),
-                   cellwidth = NA, cellheight = NA, cluster_rows = T, cluster_cols = F, clustering_method="centroid", clustering_distance_cols="euclidean",
+heatmap<- pheatmap(GenesWithChanges[,rev(altorder)], color = colorRampPalette(rev(brewer.pal(n = 7, name ="RdBu")))(100),
+                   cellwidth = NA, cellheight = NA, scale = "row", cluster_rows = T, cluster_cols = F, clustering_method="centroid", clustering_distance_cols="euclidean",
                    legend=T, show_rownames=F, show_colnames=T, fontsize_col=10, treeheight_row=0, treeheight_col=5, height = 1.5, width = 2.5)
 
 #to plot with ggplot, you need to extract [[4]] from the heatmap object
