--- a/RNA_seq_histone_chaperone_plots_PAPER_ET.Rmd
+++ b/RNA_seq_histone_chaperone_plots_PAPER_ET.Rmd
@@ -11,6 +11,7 @@
 #     install.packages("BiocManager")# BiocManager::install("scater")
 # BiocManager::install("DESeq2")
 
+```{r load packages, include=FALSE}
 library("DESeq2")
 library("ggplot2")
 library("gplots")
@@ -20,6 +21,7 @@ library("pheatmap")
 library("grid")
 library("corrplot")
 library(RColorBrewer)
+```
 
 ```{r setup, include=FALSE}
 
@@ -33,19 +35,18 @@ workingdir="C:/Users/eddie/Research/GitHub"
 knitr::opts_knit$set(root.dir = "workingdir")
 
 ```
-
 ##################################
 #start anaysis here
 ##################################
-#set working directory to folder containing featureCounts output
-setwd("C:\\Users\\eddie\\Desktop\\Research\\GitHub")
 
+```{r Read in Counts}
 #Bring in table with unnormalized transcription counts; check.names is important if you have dashes in the gene names 
 #row.names=1 command sets geneIDs as the row name
-countdataInteractors <- read.table("./readcounts_FINAL.txt",skip=1, header=TRUE,stringsAsFactors=FALSE, row.names=1, check.names=FALSE, sep="\t")
-countdataInteractors_ash3 <- read.table("./readcounts_ash3.txt",skip=1, header=TRUE,stringsAsFactors=FALSE, row.names=1, check.names=FALSE, sep="\t")
-countdataInteractors_final = cbind(countdataInteractors, countdataInteractors_ash3[,6:7])
-countdataInteractors <- data.matrix(countdataInteractors_final)
+countdataInteractors <- read.table("./text_files/readcounts_FINAL.txt",skip=1, header=TRUE,stringsAsFactors=FALSE, row.names=1, check.names=FALSE, sep="\t")
+#countdataInteractors_ash3 <- read.table("./readcounts_ash3.txt",skip=1, header=TRUE,stringsAsFactors=FALSE, row.names=1, check.names=FALSE, sep="\t")
+#countdataInteractors_final = cbind(countdataInteractors, countdataInteractors_ash3[,6:7])
+#countdataInteractors <- data.matrix(countdataInteractors_final)
+```
 
 #################################################
 #Section 1: calculate tpm using the scater package
@@ -54,12 +55,13 @@ countdataInteractors <- data.matrix(countdataInteractors_final)
 #convert count file to matrix. Note:: I initially tried to use as.matrix, 
 #but this DID NOT WORK. once I used v <- data.matrix(countfile) then it all worked fine#
 
+```{r Calculate TPM}
 #create matrix containing count data only; i.e. eliminate contig, start, stop, length fields
-Interactors_countsOnly <- data.matrix(countdataInteractors_final[ ,6:ncol(countdataInteractors_final)])
+Interactors_countsOnly <- data.matrix(countdataInteractors[ ,6:ncol(countdataInteractors)])
 
 ##Run calculateRPM function - must load "scater" library
 library("scater")
-Interactors_tpm <- calculateTPM(Interactors_countsOnly, lengths = countdataInteractors_final[,5])
+Interactors_tpm <- calculateTPM(Interactors_countsOnly, lengths = countdataInteractors[,5])
 
 ##convert to matrix again
 allDataTPM  <- data.matrix(Interactors_tpm)
@@ -73,34 +75,36 @@ samplesname <- colnames(allDataTPM)
 
 #write the long sample names to a spreadsheet file so these can be manipulated in excel or text editor
 write.table(samplesname, file="samplenames.txt", sep="\t")
+```
 
 #################
 
 #create a list of column names that you want to plot; !!!!You must include the column name for gene ID
 
+```{r Build Matrix}
 #move the subset of genes you want to plot into a new matrix
-
 sampleNames <- colnames(allDataTPM)
-write.table(sampleNames, file="stuff.txt")
-Ordered_KO_data <- cbind(allDataTPM[,22:25],allDataTPM[,26:28],allDataTPM[,1:3],allDataTPM[,4:6],allDataTPM[,7:9],allDataTPM[,10:12],allDataTPM[,13:15],allDataTPM[,16:18],allDataTPM[,19:21],allDataTPM[,29:30])
+write.table(sampleNames, file="names.txt")
+Ordered_KO_data <- cbind(allDataTPM[,22:25],allDataTPM[,26:28],allDataTPM[,1:3],allDataTPM[,4:6],allDataTPM[,7:9],allDataTPM[,10:12],allDataTPM[,16:18],allDataTPM[,13:15],allDataTPM[,19:21])
 Averaged_Orderd_KO_data <- cbind(rowMeans(allDataTPM[,22:25], na.rm = TRUE),
                                  rowMeans(allDataTPM[,26:28], na.rm = TRUE),
-                                 rowMeans(allDataTPM[,29:30], na.rm = TRUE),
                                  rowMeans(allDataTPM[,1:3], na.rm = TRUE),
                                  rowMeans(allDataTPM[,4:6], na.rm = TRUE),
                                  rowMeans(allDataTPM[,7:9], na.rm = TRUE),
                                  rowMeans(allDataTPM[,10:12], na.rm = TRUE),
-                                 rowMeans(allDataTPM[,13:15], na.rm = TRUE),
                                  rowMeans(allDataTPM[,16:18], na.rm = TRUE),
+                                 rowMeans(allDataTPM[,13:15], na.rm = TRUE),
                                  rowMeans(allDataTPM[,19:21], na.rm = TRUE))
-averageRowIDs=c("WT","set-7","set-3","cac-1","cac-2","cac-3","naf-1","asf-1","naf-2","ATRX")
+averageRowIDs=c("WT","set-7","cac-1","cac-2","cac-3","naf-1","naf-2","asf-1","ATRX")
 colnames(Averaged_Orderd_KO_data) <- averageRowIDs
+```
 
 ####################################################################
 
 #SECTION 3
 #subset data to sample only PRC2-target genes
 
+```{r, subset data}
 #read in geneIDs of PRC2 target genes
 Prc2targets <- read.table("heatmapPRC2genesEdit.txt", header=FALSE,stringsAsFactors=FALSE, check.names=FALSE, sep="\t") 
 
@@ -122,6 +126,7 @@ library(reshape2)
 
 meltedPRC2targetData <- melt(AVERAGE_Prc2targetTPM, value.name = 'Count',
                              varnames=c('GeneID', 'Sample'))
+```
 
 #################################################################################
 
